src/objects/Slave_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Slave Data</relationshipLabel>
        <relationshipName>Slave_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATED_BY_DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CREATED_BY_DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_Cliente__c</fullName>
        <label>Categoria Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cellulare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cellulare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citta_UTF_8__c</fullName>
        <label>Citta UTF 8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_UTF_8__c</fullName>
        <label>Cognome UTF-8</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Newsletter__c</fullName>
        <label>Country Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KZ</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Annullamento__c</fullName>
        <label>Data Annullamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Cancellazione_Newsletter__c</fullName>
        <label>Data Cancellazione Newsletter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Di_Registrazione__c</fullName>
        <label>Data Di Registrazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Registrazione_Newsletter__c</fullName>
        <label>Data Registrazione Newsletter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ultimo_Aggiornamento_Privacy__c</fullName>
        <label>Data Ultimo Aggiornamento Privacy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Ecommerce__c</fullName>
        <label>Email Ecommerce</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fascia_di_Eta__c</fullName>
        <label>Fascia di Età</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_DW_Master__c</fullName>
        <formula>Account__r.Id_Cliente_DW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID DW Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_AS400_Master__c</fullName>
        <formula>Account__r.Id_Cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id AS400 Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate__c</fullName>
        <label>Id Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_DW__c</fullName>
        <label>Id Cliente DW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Relate__c</fullName>
        <label>Id Cliente Relate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Salesforce__c</fullName>
        <label>Id Cliente Salesforce</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <label>Id Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_xStore__c</fullName>
        <label>Id Cliente xStore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Relate_Master__c</fullName>
        <formula>Account__r.Id_Cliente_Relate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Relate Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Xstore_Master__c</fullName>
        <formula>Account__r.Id_Cliente_xStore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Xstore Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_UTF_8__c</fullName>
        <label>Indirizzo UTF-8</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lingua__c</fullName>
        <label>Lingua</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record_Id__c</fullName>
        <formula>Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Slave__c</fullName>
        <label>Master/Slave</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natura_Giuridica__c</fullName>
        <label>Natura Giuridica</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazionalita__c</fullName>
        <label>Nazionalità</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome_UTF_8__c</fullName>
        <label>Nome UTF-8</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_MATCHING_FLAG_MASTER__c</fullName>
        <label>OUT_MATCHING_FLAG_MASTER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_MATCHING_KEY__c</fullName>
        <label>OUT_MATCHING_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_MATCHING_MASTER_CASE__c</fullName>
        <label>OUT_MATCHING_MASTER_CASE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_MATCHING_SCORE__c</fullName>
        <label>OUT_MATCHING_SCORE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUT_MATCHING_WARNING__c</fullName>
        <label>OUT_MATCHING_WARNING</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonBirthdate__c</fullName>
        <label>PersonBirthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonEmail__c</fullName>
        <label>PersonEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PersonMailingCity__c</fullName>
        <label>PersonMailingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingCountry__c</fullName>
        <label>PersonMailingCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingPostalCode__c</fullName>
        <label>PersonMailingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingState__c</fullName>
        <label>PersonMailingState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <label>PersonMailingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <label>PersonMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <label>PersonOtherPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Posta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferenza_newsletter__c</fullName>
        <label>Preferenza newsletter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professione__c</fullName>
        <label>Professione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso__c</fullName>
        <label>Sesso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>ShippingCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>ShippingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>ShippingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_Lavoro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telefono Lavoro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telefono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upd_0409__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upd 0409</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WeChat</label>
        <type>Checkbox</type>
    </fields>
    <label>Slave Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Slave Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slave Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>